# ChangeLog for dev-util/netbeans
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070519031150.ebuild:
  Unbundled jars for netbeans platform build (except jsr223-api.jar)

  19 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.0_alpha10_pre20070511.ebuild,
  +netbeans-6.0_alpha10_pre20070519031150.ebuild:
  Version bump

  12 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070511.ebuild:
  Some fixes in src_install

  12 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070511.ebuild:
  Fixed ant target path

  12 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070511.ebuild:
  Compilation fix and some new info messages

  11 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070511.ebuild:
  Added missing ant-trax

  11 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.0_alpha10_pre20070505.ebuild,
  +netbeans-6.0_alpha10_pre20070511.ebuild:
  Version bump

  06 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070505.ebuild:
  Fixed support for ruby - file permissions issue

  06 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -files/6.0/visualweb-JxpsSerializer.java-xerces-2.8.1.patch,
  netbeans-6.0_alpha10_pre20070505.ebuild:
  Some fixes and cleanups

  05 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.0_alpha8.ebuild, +netbeans-6.0_alpha10_pre20070505.ebuild,
  -netbeans-6.0_alpha9_pre20070504.ebuild:
  Version bump. Use flags are now based on clusters. Not tested yet.

  05 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-6.0_alpha9_pre20070504.ebuild:
  New experimental ebuild using USE flags for selection of features that
  should be compiled in. At this moment only compilation of Netbeans Platform
  is supported.

  04 May 2007; Vlastimil Babka <caster@gentoo.org>