@@ -17,10 +17,10 @@ DIST netbeans-graph-6.0-m10_pre20070519031150.tar.bz2 1486458 RMD160 07f3ae608b7
 DIST netbeans-html-6.0-m10_pre20070519031150.tar.bz2 666761 RMD160 c0567b5fa3c68aeb4897c12195f5f3d977023867 SHA1 016fdf1b4c2c79e96d8e8b06942b8815d3febed9 SHA256 d648451da5215e07c7a24e0e83e12e434b8124afd98d415096abdbffdc6af3f6
 DIST netbeans-httpserver-6.0-m10_pre20070519031150.tar.bz2 460025 RMD160 19d3720e512c05db61da7bbb38cb56d822fb3f86 SHA1 8db1a394c8a25676ce40f9bf13035b6a7ebc5286 SHA256 bd9f57879f12ae1771fce66b09bd087d8035bc4afc0713ccbbce7fbe90796902
 DIST netbeans-i18n-6.0-m10_pre20070519031150.tar.bz2 399487 RMD160 88477f2d065f54ebe639f7e5ec873da5e47a6ef1 SHA1 0e4f6d464d1aba38213135535d532724b8ad7e3a SHA256 792303112025cf9d70aa389843d61e78d911d006f5470567a95177c5314d30c2
-DIST netbeans-ide-6.0-m10_pre20070519031150.tar.bz2 3526608 RMD160 ad20af2ea2fe9eeaf04ee81349ed8457a554cc4a SHA1 ff016f35f4bc6d5648da39499a5855a93755b047 SHA256 23ebaec30bf50be9cc67b714fdaf8e2cd0b96d735cdeab90dbb1daec3c0a7c4d
+DIST netbeans-ide-6.0-m10_pre20070519031150.tar.bz2 3455012 RMD160 4852f530ef82b8bd5b1e12768c2608bcb122233b SHA1 3170e02a82cf760b89806b3e97396a865a54be28 SHA256 c02fde86fb78561e8ff73175b945ed5546b3be0ad797c9dfb958e3a3c3048772
 DIST netbeans-identity-6.0-m10_pre20070519031150.tar.bz2 264907 RMD160 c2ea841b1e82ef0bb20c105a90e393fa97898d8d SHA1 7acaf3dbf79630142713f898bbaaa3bb70afc3c2 SHA256 68fd01e1ce53d0da646f7529dfb3335b884786140c4c4c82868faca52fdc2753
 DIST netbeans-image-6.0-m10_pre20070519031150.tar.bz2 89706 RMD160 a807463d28494f977fc24d7220522b53d5c9188e SHA1 58f6e3b02c84a47bf3865ab91c943dc83a56ab03 SHA256 56e23f23532cb76880acdc1ffd13791d188344047f0e36678e79704d33ce115d
-DIST netbeans-j2ee-6.0-m10_pre20070519031150.tar.bz2 20884139 RMD160 80540a940703cfb83e8efb72b38c1675db3628c7 SHA1 c86e91e5cec87ca20fe0446a7e7869835f2d5360 SHA256 da6e93b1f6fb9c63e372fcab838354b3e8737c5c7e1418e0baf96a9579b098a2
+DIST netbeans-j2ee-6.0-m10_pre20070519031150.tar.bz2 20884209 RMD160 a0fb6628b5d46338200a62611720074db446ec20 SHA1 f4eac06e3f72dec86c985e94285a4f2b6a7a365f SHA256 cb630690d18fc4a618ad59f9f62ef4f56e6758d299d79e9a54b535b994332d0e
 DIST netbeans-j2eeserver-6.0-m10_pre20070519031150.tar.bz2 240441 RMD160 674c77eb72c977fbaa010aff2fb003083c0953e0 SHA1 d1bc35fe899c327cf3bfc86f5e8a8182cf1ec40c SHA256 2970beafe0129d3787f2894bc756da7a8708a6bfd7a429fe661c7775afd766b6
 DIST netbeans-java-6.0-m10_pre20070519031150.tar.bz2 4270857 RMD160 2631da50c8bb7e654e7ecd7f4bf9b3d0679b48c7 SHA1 9726152b69f8495341b193449f0b7aeba61dc48e SHA256 77666318a7c18721499a50d0b9c98ab9697b21670486c467e88d0112cc27ba90
 DIST netbeans-javacvs-6.0-m10_pre20070519031150.tar.bz2 1390940 RMD160 bb628dbdcc98a2fc5914b665cd63fc15bcc138ea SHA1 2eb29f0cf255fe73502a840273376a919335d945 SHA256 bef6932fc8e178b66c111e8be74f40a189b4b5180410cf52c8cce327941c5f6d
@@ -36,7 +36,7 @@ DIST netbeans-libs-6.0-m10_pre20070519031150.tar.bz2 4581517 RMD160 eafc59f2ecd0
 DIST netbeans-logger-6.0-m10_pre20070519031150.tar.bz2 3052367 RMD160 14892fea488208cbc3af34707139fb51f4fd4840 SHA1 0f633a604a261b1684cb10a1f09596d369b025b6 SHA256 86de7c71084e5a8ba16e32dc38b519e4a367af797cbfbe221b9ac87521cfb501
 DIST netbeans-mobility-6.0-m10_pre20070519031150.tar.bz2 7667113 RMD160 4527891e68794166f8cb37529f1db32a9ad91bdc SHA1 541daebf5a626670fdd10deaef1f51708bbd17e4 SHA256 e8371bb57d847c738bfaa328324d9b9d8e4ab2dcde4ed801405dfb7864addd90
 DIST netbeans-monitor-6.0-m10_pre20070519031150.tar.bz2 10178353 RMD160 8da98068fdc406fc88dc53e00c81af224486143e SHA1 84d27442bc57312bc836dd30d4cd3d5cd4cdf965 SHA256 9d737173112d0b59b9a5abbc6176ccabe4020669339f2f9e1f0a168a4352fa7a
-DIST netbeans-nbbuild-6.0-m10_pre20070519031150.tar.bz2 340524 RMD160 2bbceec3dbe372d8400075a38c5f55d3c3157e6f SHA1 12926ba5aab50847e51bf3185bc627b41bbf456c SHA256 dfa96e6567dddd5c0bca0b648e2a7d194e93ac352216737eda4becc2031ecfa9
+DIST netbeans-nbbuild-6.0-m10_pre20070519031150.tar.bz2 340522 RMD160 f571dd0a14b81e80e95e65af75c6bcdcf5fd3894 SHA1 89a1dd7ab42527b1acdb7a5017ff8f675892f3a9 SHA256 d80f709f003d07089a767b75b4b388f8beb5ec7849c616095b1ca1b90ff80992
 DIST netbeans-openide-6.0-m10_pre20070519031150.tar.bz2 4355581 RMD160 4ae70752c4ea49b62c9c6af4f4d3f5648697c1c3 SHA1 8e9b7cf7ba001f638a0410aac3f59d0c468d858e SHA256 84f96af2bc7900484e4e172f5622975137e6347460192493e5f645db92e484c6
 DIST netbeans-openidex-6.0-m10_pre20070519031150.tar.bz2 167790 RMD160 2610e44b2f9eb6b558eee29205afbe5473e6ab4c SHA1 0c02d64a2957c64abaad6feafd18148db80f94db SHA256 fce64c480dc7fce793df1c5ee58da35628981044f8bb8c4f7664f7ed82d545c8
 DIST netbeans-print-6.0-m10_pre20070519031150.tar.bz2 42043 RMD160 c09d64e3f2846656dc557f63dc9c9c21f7b495e4 SHA1 1de8242c2c4e39215ef50990fd29bb0569a7490b SHA256 150ed55d95241b196763d9f1714ee04f75656c507dd506066355dee63bd08a7c
@@ -46,17 +46,17 @@ DIST netbeans-properties-6.0-m10_pre20070519031150.tar.bz2 237382 RMD160 d6a8b57
 DIST netbeans-refactoring-6.0-m10_pre20070519031150.tar.bz2 299446 RMD160 07d458d8369146397f46508d3cd36a48ff2cabb2 SHA1 5c004f64615c302ab4c3cb1a76bc9b21fc9a5e0d SHA256 911be345341a59fcfc9261f640d31a0eb6df42b004193e6bcfdd2a32102f31a1
 DIST netbeans-schema2beans-6.0-m10_pre20070519031150.tar.bz2 341179 RMD160 45785bef4f73b61e863d5986895efd5801104a4d SHA1 3cab2f2d5af2f91b8bfb2b7f7744b6e145aca7b5 SHA256 9ca8cf70bbc5cc80f100244c06b34aa9b36240c05b3dbdfd4d7d4f26788d2685
 DIST netbeans-scripting-6.0-m10_pre20070519031150.tar.bz2 10308967 RMD160 a46ae2f1a497a94c319177b967f159bc630d489d SHA1 8e57bb6406612066b497b27f64e0fe98c67359b7 SHA256 0d193b79b9a5fbab88f06b61c89a69c4dd97c928ee1dd2e96cf3848b3e596ae5
-DIST netbeans-serverplugins-6.0-m10_pre20070519031150.tar.bz2 3109301 RMD160 8bc27b0c3c82903d783c51e02950fc91edf2bd7e SHA1 3bf72e6e0f6d19cb44d0c7e745404633ee505fd6 SHA256 647ec94d309d3dc84d9f8e0f330e77d13fa33b5fccd010218222e39eab6cc17d
+DIST netbeans-serverplugins-6.0-m10_pre20070519031150.tar.bz2 3109320 RMD160 1e24244dd8de08d995b2b5a76912c7ec892dc6b3 SHA1 51686a75a6ee0b619b5570005030d0b8432983fd SHA256 366f7ee65e58579c5cc972289506052446f9813ef3ec3d4a74eee603c9adec2a
 DIST netbeans-subversion-6.0-m10_pre20070519031150.tar.bz2 2337950 RMD160 a53119a23925a4a34cff463e664250810fe554e1 SHA1 4880c6bf9ac547378bb4e27f2a6087a62a22f16c SHA256 bba00d6c15b8c1e3c75fa15a8699fe1079e499fac0a9306234afac83b4a7b741
 DIST netbeans-uml-6.0-m10_pre20070519031150.tar.bz2 25205154 RMD160 8a625ee30b76521b831a5d3e1ab2c16cf1aedc54 SHA1 116719fc8213c12747c079b94207d565748c027e SHA256 ca3b5333f9900e2e94f094a7a024f307f61f454e9ec15dbb804f686acda5017b
 DIST netbeans-usersguide-6.0-m10_pre20070519031150.tar.bz2 7382692 RMD160 2d5772248f0e2b44637fa2a8479b1b3a4fb4cef4 SHA1 e4d087f084bf17ff281de1eab0c07276a056776d SHA256 cc0551960d458f1db7da11d651ff9d50513cfbe9785a3ca0156560dbb70585a7
 DIST netbeans-utilities-6.0-m10_pre20070519031150.tar.bz2 278556 RMD160 675fa52e649f17f2197c72af6fc210852a117818 SHA1 56d6e4da4d321eb0d545bfc192003451f76a1d27 SHA256 734a359a22a635deaa22e9c3d75c109658363d084c72508ea540d23d361d0270
 DIST netbeans-versioncontrol-6.0-m10_pre20070519031150.tar.bz2 170460 RMD160 b4c88c695047623de769b85542b15ece7ba5a027 SHA1 1daa7e3bafca88af602457a9acbc982d26e9257e SHA256 727a391e50ed376319293129e272333ec410d92933ef9a3e5330c53862a46a63
 DIST netbeans-visualweb-6.0-m10_pre20070519031150.tar.bz2 60377846 RMD160 b1671ef5ad02f05ac141eb061edb75d2f220f214 SHA1 93ad45f5b2102eb78a2535f35d098fa17c0c876c SHA256 55e2bdbf38ee20b07d85d11875ee7e6bd8e8f525567f330a3f61e8406f0e17ec
-DIST netbeans-web-6.0-m10_pre20070519031150.tar.bz2 9977065 RMD160 0625969a79263498487e3cd39b8f54b58270fc39 SHA1 40ba0752a837b7b003323ab0f2be1cc657702339 SHA256 deb39ab318785de5d04119d03016adbb8a4ee9d7eed4d187ba8235166b1022c7
-DIST netbeans-websvc-6.0-m10_pre20070519031150.tar.bz2 29147449 RMD160 1543b623c2dd7dccad30b96ad9b941451d9855d2 SHA1 3af20b76a2a187ff62f38e957a86c4539a34f92f SHA256 9ebe9b5f6ebb408c77c83b19fff6c80307d8ca27d823ff9b7c0fde6c1896bcc0
+DIST netbeans-web-6.0-m10_pre20070519031150.tar.bz2 9976868 RMD160 ab78fb481e0844780a566fa8c0d990e578b63a8a SHA1 68d674e34ae2af64a3f38306a8d755bec4a46108 SHA256 96affdb1fed701bc2c8ed9103abbf41d02e33b59adb9fd71333779254a37fa99
+DIST netbeans-websvc-6.0-m10_pre20070519031150.tar.bz2 29147421 RMD160 9f756e39ab919931967a43705f8338561960284d SHA1 2db398434afb90fdb07da194ace72cb88dead752 SHA256 1b6a899348b7864f49238f2d9e8348655fd0e9fd6419a9c21b01ce6d7cc70b98
 DIST netbeans-xml-6.0-m10_pre20070519031150.tar.bz2 7561591 RMD160 348d72428b93b858e9c01121c1063eaa250dd27d SHA1 631aff90a133adecf174dcd6265b2f2494d402ec SHA256 2a00cabf5f0e1643998b8ced797c7989d6c97c3747a4b127375562c9b1a79975
 DIST netbeans-xtest-6.0-m10_pre20070519031150.tar.bz2 4708902 RMD160 0d851686c0df1f08fb6ed64ac77bbfff55f780fa SHA1 bf68b771385f7808238bc2fd1a7ab410ec086145 SHA256 6ab076feb90a13baf7e37550db8d2a2feca548f2df004c0423c7430b264bd5d6
-EBUILD netbeans-6.0_alpha10_pre20070519031150.ebuild 23892 RMD160 19789169f8406753d3eeebef04c39f97e48b275b SHA1 2b782acbda0750ce90b57fff42a99ec3531260ce SHA256 675110d2b8a4f86ccb0c684b72a5c6822e3b067dd3ea71a30f01db469534e7a4
-MISC ChangeLog 13775 RMD160 712b10ff6ddbfb66d7d933b2a2898224fb6fee49 SHA1 dc599932363d87434b2e08e9ed77a33e89d23217 SHA256 b6a67622e186234247dda6f035e6b1d75fbaa15fc706999570026bdf4553f4e3
+EBUILD netbeans-6.0_alpha10_pre20070519031150.ebuild 24087 RMD160 fc6d158bc74bca4b9a64c06adbf6ec2d61def607 SHA1 687e51ccfe0a2fd1e543716a7d69d2934410211b SHA256 05ed7442d9acd3519e54cc73beb2df21bb2d9ed02ab55122a4d62acab127a79e
+MISC ChangeLog 13996 RMD160 9884dd703cc9a10386367c039bdc68ddf4721f73 SHA1 851a97001a57cf3396b96a8fd1b42572066fcfc4 SHA256 0b8b354797e68575ea554d815cd7fe04af55e2425355cc2be50478a12b0fe464
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
